--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body, html {
   padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: #000000;
+  background-color: transparent;
 }
 
 #root {
