--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 *{
+/* App.css */
+@import './Stylings/LoginPage.css';
+@import './Stylings/MainPage.css';
+@import './Stylings/ItemPage.css';
+@import './Stylings/ProfilePage.css';
+@import './Stylings/SearchPage.css';
+@import './Stylings/CartPage.css';
     padding: 0;
-    margin: 0;
-}
+    margin: 0;}
