--- a/src/Stylings/LoginPage.css
+++ b/src/Stylings/LoginPage.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body, html {
@@ -13,30 +12,24 @@ body, html {
 .login_page {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
-  background-color: #000000;
+  background-color: #00000000;
   margin: 0;
   padding: 0;
   border: none;
   transition: all 0.5s ease-in;
-}
-
-.custom-rays {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   z-index: 1;
 }
+
+
 
 .container {
   position: relative;
   z-index: 2;
   width: 100%;
   height: 100%;
-  background: transparent;
+  background: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.5) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
